# vw-tdd-oktober-2022

./: .gitignore  README.md
BlankCMakeProjekt/: CMakeLists.txt
BlankCMakeProjekt/source/: main.cpp
BlankCMakeProjekt/tests/: CMakeLists.txt  main.cpp
Tag1_01StapelProjekt/: Tag1_01StapelProjekt.sln
Tag1_01StapelProjekt/Tag1_01StapelProjekt/: Tag1_01StapelProjekt.cpp  Tag1_01StapelProjekt.vcxproj  Tag1_01StapelProjekt.vcxproj.filters  stapel.h  staper_exception.h
Tag1_01StapelProjekt/Tag1_01StapelProjektTest/: Tag1_01StapelProjektTest.vcxproj  stapel_test.h
Tag1_02StapelMitCmake/: CMakeLists.txt
Tag1_02StapelMitCmake/source/: stapel.cpp
Tag1_02StapelMitCmake/tests/: CMakeLists.txt  stapel_test.cpp  stapel_test.h
Tag1_03SchweinProjekt/: CMakeLists.txt
Tag1_03SchweinProjekt/source/: Calculator.h  calculator_client.h  calculator_logger.h  calulator_impl.h  main.cpp  schwein.h
Tag1_03SchweinProjekt/tests/: CMakeLists.txt  Mockcalculator.h  calculator_client_test.cpp  calculator_client_test.h
Tag2_01PersonenServiceProjekt/: CMakeLists.txt
Tag2_01PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
Tag2_01PersonenServiceProjekt/source/service/: blacklist_service.h  personen_service_exception.h  personen_service_impl.h
Tag2_01PersonenServiceProjekt/tests/: CMakeLists.txt  Mockblacklist_service.h  Mockpersonen_repository.h  personen_service_impl_test.cpp  personen_service_impl_test.h
TakeGameProject/: CMakeLists.txt  main.cpp
TakeGameProject/source/IO/: console_writer.h  writer.h
TakeGameProject/source/clients/: game_client.h
TakeGameProject/source/games/: abstract_game.h  game.h
TakeGameProject/source/games/players/: abstract_player.h  player.h
TakeGameProject/source/games/take_game/: take_game_impl.h
TakeGameProject/source/games/take_game/players/: abstract_take_game_player.h  computer_player.h  human_player.h
TakeGameProject/tests/: CMakeLists.txt  DummyClassesForTest.h  Mockplayer.h  Mockwriter.h  MyAbstractGameDummy.h  abstract_game_test.cpp  abstract_game_test.h  computer_player_test.cpp  computer_player_test.h
Unterlagen/: CPP-TDD.docx
array-uebung/: CMakeLists.txt  main.cpp
array-uebung/source/application/: measurement_application.cpp  measurement_application.h
array-uebung/source/container/: threaded_number_vector_factory.cpp  threaded_number_vector_factory.h  vector_factory.h
array-uebung/source/generators/: item_generator.h  number_generator.h  number_generator_factory.h
array-uebung/source/random/: mersenne_twister_number_generator.h  mersenne_twister_number_generator_factory.h
array-uebung/source/time/: stopwatch.h  stopwatch_impl.cpp  stopwatch_impl.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-event/src/de/tiere/: Schwein.java
interface-segregation-gui/src/de/limago/: Fenster.java
